Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flight Delay Compensation | Quaerens</title>
+  <title>Exitmytimeshares.com | Quaerens</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -569,378 +569,6 @@
   <a href="gdpr.html" style="color: #2563eb; text-decoration: none; margin: 0 0.5rem;">GDPR</a> |
   <a href="contact.html" style="color: #2563eb; text-decoration: none; margin: 0 0.5rem;">Contact Us</a>
 </footer>
-
-<script>
-    document.getElementById('compensation-form').addEventListener('submit', function (e) {
-      e.preventDefault();
-  
-      const delay = parseInt(document.getElementById('delay').value);
-      const result = document.getElementById('compensation-result');
-      const claimButton = document.getElementById('claim-button');
-  
-      let compensation = 0;
-      let message = '';
-  
-      if (delay >= 4) {
-        compensation = 600;
-      } else if (delay >= 3) {
-        compensation = 400;
-      }
-  
-      if (compensation > 0) {
-        message = `✅ You may be entitled to <strong>€${compensation}</strong> in compensation.`;
-        claimButton.textContent = 'File Your Claim Free →';
-        claimButton.classList.remove('hidden');
-      } else {
-        message = `ℹ️ Unfortunately, delays under 3 hours don’t qualify under EU261 rules.`;
-        claimButton.classList.add('hidden');
-      }
-  
-      result.innerHTML = message;
-      result.classList.remove('hidden');
-    });
-  
-    // Airport datalist logic
-    const airportList = [
-      "Amsterdam Schiphol (AMS)", "Barcelona El Prat (BCN)", "Berlin Brandenburg (BER)", "Brussels Zaventem (BRU)",
-      "Copenhagen (CPH)", "Dublin (DUB)", "Edinburgh (EDI)", "Frankfurt (FRA)", "Geneva (GVA)", "Lisbon (LIS)",
-      "London Gatwick (LGW)", "London Heathrow (LHR)", "Madrid Barajas (MAD)", "Malaga (AGP)", "Manchester (MAN)",
-      "Milan Malpensa (MXP)", "Munich (MUC)", "Nice Côte d'Azur (NCE)", "Oslo Gardermoen (OSL)", "Paris Charles de Gaulle (CDG)",
-      "Paris Orly (ORY)", "Porto (OPO)", "Prague Vaclav Havel (PRG)", "Rome Fiumicino (FCO)", "Stockholm Arlanda (ARN)",
-      "Vienna (VIE)", "Warsaw Chopin (WAW)", "Zagreb (ZAG)", "Zurich (ZRH)", "Athens (ATH)", "Palma de Mallorca (PMI)",
-      "Ibiza (IBZ)", "Tenerife South (TFS)", "Gran Canaria (LPA)", "Rhodes (RHO)", "Corfu (CFU)", "Heraklion (HER)",
-      "Larnaca (LCA)", "Paphos (PFO)", "Split (SPU)", "Dubrovnik (DBV)", "Reykjavik (KEF)"
-    ];
-
-    const datalist = document.getElementById('airports');
-  airportList.forEach(name => {
-    const option = document.createElement('option');
-    option.value = name;
-    datalist.appendChild(option);
-  });
-</script>
-
-<button id="scrollTopBtn" class="hidden fixed bottom-6 right-6 z-50 p-3 bg-blue-600 text-white rounded-full shadow-lg hover:bg-blue-700 transition">
-  ↑
-</button>
-<script>
-  const scrollBtn = document.getElementById("scrollTopBtn");
-  window.addEventListener("scroll", () => {
-    scrollBtn.classList.toggle("hidden", window.scrollY < 300);
-  });
-  scrollBtn.addEventListener("click", () => {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  });
-</script>
-
-<script type="module" src="firebase-setup.js"></script>
-
-<script>
-  const db = window.firestore;
-  const storage = window.storage;
-  const {
-    collection,
-    addDoc,
-    serverTimestamp,
-    ref,
-    uploadBytes,
-    getDownloadURL
-  } = window.firebaseUtils;
-
-  document.getElementById("claim-letter-form").addEventListener("submit", async function (e) {
-    e.preventDefault();
-    console.log("Form submitted"); // <--- for debugging
-    // your code to extract values + call generatePDF()
-  });
-
-<script>
-  const airlineEmails = {
-  "Ryanair": "claims@ryanair.com",
-  "easyJet": "customer.support@easyjet.com",
-  "Lufthansa": "customer.relations@lufthansa.com",
-  "Vueling": "atencion.clientes@vueling.com",
-  "British Airways": "customer.relations@ba.com",
-  "KLM": "mail@klm.nl",
-  "Transavia": "servicecentre@transavia.com",
-  "Air France": "mail.afklmplc@airfrance.fr",
-  "Iberia": "clasica@iberia.es",
-  "Jet2": "customer.service@jet2.com",
-  "Wizz Air": "claim@wizzair.com",
-  "TUI Airways": "aftertravel@tui.co.uk",
-  "Norwegian": "complaints@norwegian.com",
-  "Aer Lingus": "customerqueries@aerlingus.com",
-  "Brussels Airlines": "claim@brusselsairlines.com",
-  "Swiss International Air Lines": "contact@swiss.com",
-  "Eurowings": "customercare@eurowings.com",
-  "TAP Air Portugal": "customer@tap.pt",
-  "Finnair": "feedback@finnair.com",
-  "SAS Scandinavian Airlines": "customercare@sas.se",
-  "Aegean Airlines": "customercare@aegeanair.com",
-  "LOT Polish Airlines": "contact@lot.pl",
-  "Air Malta": "customer.relations@airmalta.com",
-  "Corendon Airlines": "info@corendon-airlines.com",
-  "SunExpress": "customer.service@sunexpress.com",
-  "Blue Air": "support@blueairweb.com",
-  "Volotea": "support@volotea.com",
-  "Lauda Europe": "assistance@laudamotion.com",
-  "Widerøe": "info@wideroe.no",
-  "Croatia Airlines": "contact@croatiaairlines.hr",
-  "Alitalia (ITA Airways)": "customer.relations@itaspa.com",
-  "Condor": "service@condor.com"
-};
-
-const airlineLogos = {
-  "Ryanair": "images/logos/ryanair.png",
-  "easyJet": "images/logos/easyjet.png",
-  "Lufthansa": "images/logos/lufthansa.png",
-  "Vueling": "images/logos/vueling.png",
-  "British Airways": "images/logos/britishairways.png",
-  "KLM": "images/logos/klm.png",
-  "Transavia": "images/logos/transavia.png",
-  "Air France": "images/logos/airfrance.png",
-  "Iberia": "images/logos/iberia.png",
-  "Jet2": "images/logos/jet2.png",
-  "Wizz Air": "images/logos/wizzair.png",
-  "TUI Airways": "images/logos/tuiairways.png",
-  "Norwegian": "images/logos/norwegian.png",
-  "Aer Lingus": "images/logos/aerlingus.png",
-  "Brussels Airlines": "images/logos/brusselsairlines.png",
-  "Swiss International Air Lines": "images/logos/swissinternationalairlines.png",
-  "Eurowings": "images/logos/eurowings.png",
-  "TAP Air Portugal": "images/logos/tapairportugal.png",
-  "Finnair": "images/logos/finnair.png",
-  "SAS Scandinavian Airlines": "images/logos/sasscandinavianairlines.png",
-  "Aegean Airlines": "images/logos/aegeanairlines.png",
-  "LOT Polish Airlines": "images/logos/lotpolishairlines.png",
-  "Air Malta": "images/logos/airmalta.png",
-  "Corendon Airlines": "images/logos/corendonairlines.png",
-  "SunExpress": "images/logos/sunexpress.png",
-  "Blue Air": "images/logos/blueair.png",
-  "Volotea": "images/logos/volotea.png",
-  "Lauda Europe": "images/logos/laudaeurope.png",
-  "Widerøe": "images/logos/wideroe.png",
-  "Croatia Airlines": "images/logos/croatiaairlines.png",
-  "Alitalia (ITA Airways)": "images/logos/italiaitaairways.png",
-  "Condor": "images/logos/condor.png"
-};
-
-document.getElementById("airline").addEventListener("input", function () {
-  const airlineName = this.value;
-  const logoPath = airlineLogos[airlineName];
-  const previewContainer = document.getElementById("airlineLogoPreview");
-  if (logoPath) {
-    previewContainer.innerHTML = `<img src="${logoPath}" alt="${airlineName} Logo" class="mx-auto h-12 md:h-16 mt-2">`;
-  } else {
-    previewContainer.innerHTML = "";
-  }
-});
-</script>
-
-<script>
-  // ✅ UPDATED SCRIPT WITH BOOKING REF + IBAN FIELDS INCLUDED IN CLAIM DATA AND PDF
-  document.getElementById("claim-letter-form").addEventListener("submit", async function (e) {
-    e.preventDefault();
-
-    const fullName = document.getElementById("fullName").value.trim();
-    const flightNumber = document.getElementById("flightNumber").value.trim();
-    const flightDate = document.getElementById("flightDate").value;
-    const bookingRef = document.getElementById("bookingRef").value.trim();
-    const iban = document.getElementById("iban").value.trim();
-    const depAirport = document.getElementById("depAirport").value.trim();
-    const arrAirport = document.getElementById("arrAirport").value.trim();
-    const airline = document.getElementById("airline").value;
-    const reason = document.getElementById("reason").value.trim();
-    const language = document.getElementById("language").value;
-    const email = document.getElementById("email").value.trim();
-    const handleOption = document.getElementById("handleOption").value;
-    const donation = document.getElementById("donation").value;
-    const distance = document.getElementById("distance").value;
-    const delayDuration = document.getElementById("delayDuration").value;
-    const compensation = calculateCompensation(distance, delayDuration);
-
-    if (!fullName || !flightNumber || !flightDate || !depAirport || !arrAirport || !email || !airline) {
-      alert("Please fill in all required fields.");
-      return;
-    }
-
-    const file = document.getElementById("fileUpload").files[0];
-    let fileURL = "";
-
-    if (file) {
-      const storageRef = ref(storage, `uploads/${Date.now()}-${file.name}`);
-      const uploadSnapshot = await uploadBytes(storageRef, file);
-      fileURL = await getDownloadURL(uploadSnapshot.ref);
-    }
-
-    const claimData = {
-      fullName,
-      flightNumber,
-      flightDate,
-      depAirport,
-      arrAirport,
-      airline,
-      reason,
-      distance,
-      delayDuration,
-      compensation,
-      language,
-      email,
-      handleOption,
-      donation,
-      bookingRef,
-      iban,
-      fileURL,
-      createdAt: serverTimestamp(),
-      airlineEmail: airlineEmails[airline] || ""
-    };
-
-    try {
-      await addDoc(collection(db, "flightClaimLetters"), claimData);
-
-      if (handleOption === "pdf") {
-        generatePDF(claimData);
-      } else if (handleOption === "email") {
-        await fetch("https://us-central1-quaerensclaims.cloudfunctions.net/sendClaimEmail", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(claimData)
-        });
-        alert("✅ Your letter has been emailed!");
-      } else if (handleOption === "quaerens") {
-        alert("✅ Your case has been submitted to Quaerens. We’ll contact you shortly.");
-      }
-
-      document.getElementById("claim-letter-result").classList.remove("hidden");
-    } catch (err) {
-      console.error("Error saving claim:", err);
-      alert("Something went wrong. Please try again.");
-    }
-  });
-</script>
-
-<script>
-const translations = {
-  en: {
-    intro: `Dear Sir/Madam,\n\nI am writing to formally request compensation under EC Regulation 261/2004 for the following disrupted flight:`,
-    closing: `According to EC Regulation 261/2004, I am entitled to this compensation based on the circumstances described above. Please process this claim within 14 days. I reserve the right to escalate to the relevant enforcement body or seek legal redress if not resolved in time.\n\nSincerely,\n\n`,
-    subject: "Compensation Request under EC Regulation 261/2004",
-    to: "To:",
-    detailsTitle: "Flight Details:",
-    paymentLabel: "Preferred Payment Method",
-    claimRef: "Claim Reference",
-    footer: "This document was generated at no cost by Quaerens.co.uk."
-  },
-  fr: {
-    intro: `Madame, Monsieur,\n\nJe vous écris pour demander une indemnisation selon le règlement CE 261/2004 pour le vol suivant :`,
-    closing: `Conformément au règlement CE 261/2004, j'ai droit à une indemnisation basée sur les circonstances décrites ci-dessus. Veuillez traiter cette réclamation dans les 14 jours. Je me réserve le droit de faire appel à l'organisme compétent ou de recourir à une procédure judiciaire si cela n'est pas résolu à temps.\n\nCordialement,\n\n`,
-    subject: "Demande d'indemnisation selon le règlement CE 261/2004",
-    to: "À :",
-    detailsTitle: "Détails du vol :",
-    paymentLabel: "Méthode de paiement préférée",
-    claimRef: "Référence du dossier",
-    footer: "Ce document a été généré gratuitement par Quaerens.co.uk."
-  },
-  // Add other languages here (de, es, nl)
-};
-
-function generatePDF(data) {
-  const { jsPDF } = window.jspdf;
-  const doc = new jsPDF();
-  const today = new Date().toLocaleDateString();
-  const claimRef = `Q-${new Date().toISOString().slice(0, 10).replace(/-/g, "")}-${Math.random().toString(36).substring(2, 8).toUpperCase()}`;
-  const airlineContact = `${data.airline}\n${data.airlineEmail ? "Email: " + data.airlineEmail : ""}`;
-  const logoPath = airlineLogos[data.airline];
-
-  function insertHeader() {
-    if (logoPath) {
-      const img = new Image();
-      img.crossOrigin = "anonymous";
-      img.src = logoPath;
-      img.onload = () => {
-        doc.addImage(img, "PNG", 150, 8, 40, 15);
-        insertContent();
-      };
-      img.onerror = insertContent;
-    } else {
-      insertContent();
-    }
-  }
-
-  function insertContent() {
-    let y = 20;
-    doc.setFont("helvetica", "normal");
-    doc.setFontSize(12);
-    doc.setTextColor(0, 0, 0);
-
-    doc.setFont(undefined, "bold");
-    doc.text(today, 10, y);
-    y += 10;
-
-    doc.setFont(undefined, "normal");
-    doc.text(`Claim Reference: ${claimRef}`, 10, y);
-    y += 12;
-
-    doc.setFont(undefined, "bold");
-    doc.text("To:", 10, y);
-    y += 6;
-    doc.setFont(undefined, "normal");
-    doc.text(airlineContact, 10, y);
-    y += 14;
-
-    doc.setFont(undefined, "bold");
-    doc.text("Subject:", 10, y);
-    y += 6;
-    doc.setFont(undefined, "normal");
-    doc.text("Compensation Request under EC Regulation 261/2004", 10, y);
-    y += 10;
-
-    const intro = `Dear Sir/Madam,\n\nI am writing to formally request compensation under EC Regulation 261/2004 for the following disrupted flight:`;
-    const introLines = doc.splitTextToSize(intro, 180);
-    doc.text(introLines, 10, y);
-    y += introLines.length * 6 + 6;
-
-    doc.setFont(undefined, "bold");
-    doc.text("Flight Details:", 10, y);
-    y += 8;
-
-    doc.setFont(undefined, "normal");
-    const details = [
-      `Passenger Name: ${data.fullName}`,
-      `Email: ${data.email}`,
-      `Flight Number: ${data.flightNumber}`,
-      `Booking Reference: ${data.bookingRef}`,
-      `Flight Date: ${data.flightDate}`,
-      `Departure Airport: ${data.depAirport}`,
-      `Arrival Airport: ${data.arrAirport}`,
-      `Airline: ${data.airline}`,
-      `Reason for Delay: ${data.reason || "Not specified"}`,
-      `Flight Distance: ${data.distance}`,
-      `Delay Duration: ${data.delayDuration}`,
-      `Estimated Compensation: €${data.compensation}`,
-      `Preferred Payment Method: ${data.iban}`
-    ];
-    details.forEach(line => {
-      doc.text(line, 10, y);
-      y += 7;
-    });
-
-    y += 4;
-    const closing = `According to EC Regulation 261/2004, I am entitled to this compensation based on the circumstances described above. Please process this claim within 14 days. I reserve the right to escalate to the relevant enforcement body or seek legal redress if not resolved in time.\n\nSincerely,\n\n${data.fullName}`;
-    const closingLines = doc.splitTextToSize(closing, 180);
-    doc.text(closingLines, 10, y);
-    y += closingLines.length * 6;
-
-    doc.setFontSize(10);
-    doc.setTextColor(120);
-    doc.text("This document was generated at no cost by Quaerens.co.uk.", 10, 290);
-
-    doc.save(`EC261-Claim-${data.flightNumber}.pdf`);
-  }
-
-  insertHeader();
-}
-
-</script>
 
 <script>
   const eligibleResorts = [
