--- a/public/index.html
+++ b/public/index.html
@@ -356,7 +356,7 @@
 <div class="bg-white bg-opacity-90 backdrop-blur-sm rounded-xl shadow-xl p-6 border border-red-300 transition-transform duration-300 hover:-translate-y-1">
     <h3 class="text-lg font-bold text-red-700 mb-4 text-center">USING A LAWYER</h3>
     <ul class="text-gray-800 text-sm space-y-3">
-      <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Legal fees often exceed £2,000 or more</span></li>
+      <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Legal fees often exceed €2,000 or more</span></li>
       <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Complex legal process with no guaranteed result</span></li>
       <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Delays of 6–18 months are common</span></li>
       <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Many firms offer no refund if they fail</span></li>
