Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -468,61 +468,80 @@
   </div>  
 
 <!-- Testimonials -->
-<section class="relative py-16" style="background-image: url('images/airport-soft-bg.jpg'); background-size: cover; background-position: center;">
-    <div class="bg-white bg-opacity-90 py-12">
-      <div class="max-w-6xl mx-auto px-4">
-        <h2 class="text-2xl font-bold text-center mb-10">What Our Clients Say</h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-          
-          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-            <p class="italic">“I exited my timeshare in just 3 weeks using their kit. Amazing.”</p>
-            <p class="font-semibold mt-4">– James B.</p>
-          </div>
+<section class="relative py-20 bg-gradient-to-br from-yellow-50 via-white to-blue-50">
+    <div class="max-w-7xl mx-auto px-6">
+      <h2 class="text-3xl font-extrabold text-center text-blue-900 mb-12 tracking-tight">What Our Clients Say</h2>
   
-          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-            <p class="italic">“No pressure, no lawyers. Just downloaded the documents and sent them.”</p>
-            <p class="font-semibold mt-4">– Anna K.</p>
-          </div>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
   
-          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-            <p class="italic">“Saved over €3,000 by doing it myself instead of hiring a firm.”</p>
-            <p class="font-semibold mt-4">– Willem J.</p>
-          </div>
-  
-          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-            <p class="italic">“Clear steps, legally written letters — and they worked first try.”</p>
-            <p class="font-semibold mt-4">– Sophie M.</p>
-          </div>
-  
-          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-            <p class="italic">“I was skeptical, but this is legit. No hidden fees, just good help.”</p>
-            <p class="font-semibold mt-4">– David T.</p>
-          </div>
-  
-          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-            <p class="italic">“Tried 3 companies before. This kit is what finally worked.”</p>
-            <p class="font-semibold mt-4">– Eleni S.</p>
-          </div>
-  
-          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-            <p class="italic">“So simple I could do it myself. No need to talk to anyone.”</p>
-            <p class="font-semibold mt-4">– Mike R.</p>
-          </div>
-  
-          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-            <p class="italic">“Highly recommend this to anyone stuck in a timeshare mess.”</p>
-            <p class="font-semibold mt-4">– Fatima D.</p>
-          </div>
-  
-          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-            <p class="italic">“Took me 30 minutes total. I emailed the letter, got confirmation a week later.”</p>
-            <p class="font-semibold mt-4">– Thomas V.</p>
-          </div>
-  
+        <div class="bg-white border border-gray-200 rounded-xl shadow-md p-6 hover:-translate-y-1 hover:shadow-lg transition duration-300" data-aos="fade-up">
+          <p class="italic text-gray-700">“I exited my timeshare in just 3 weeks using their kit. Amazing.”</p>
+          <p class="font-semibold mt-4 text-blue-800 flex items-center gap-2">
+            <img src="https://flagcdn.com/w40/gb.png" class="w-5 h-5 rounded-full" alt="UK Flag"> James B. (UK)
+          </p>
         </div>
+  
+        <div class="bg-white border border-gray-200 rounded-xl shadow-md p-6 hover:-translate-y-1 hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="100">
+          <p class="italic text-gray-700">“No pressure, no lawyers. Just downloaded the documents and sent them.”</p>
+          <p class="font-semibold mt-4 text-blue-800 flex items-center gap-2">
+            <img src="https://flagcdn.com/w40/de.png" class="w-5 h-5 rounded-full" alt="Germany Flag"> Anna K. (Germany)
+          </p>
+        </div>
+  
+        <div class="bg-white border border-gray-200 rounded-xl shadow-md p-6 hover:-translate-y-1 hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="200">
+          <p class="italic text-gray-700">“Saved over €3,000 by doing it myself instead of hiring a firm.”</p>
+          <p class="font-semibold mt-4 text-blue-800 flex items-center gap-2">
+            <img src="https://flagcdn.com/w40/nl.png" class="w-5 h-5 rounded-full" alt="Netherlands Flag"> Willem J. (Netherlands)
+          </p>
+        </div>
+  
+        <div class="bg-white border border-gray-200 rounded-xl shadow-md p-6 hover:-translate-y-1 hover:shadow-lg transition duration-300" data-aos="fade-up">
+          <p class="italic text-gray-700">“Clear steps, legally written letters — and they worked first try.”</p>
+          <p class="font-semibold mt-4 text-blue-800 flex items-center gap-2">
+            <img src="https://flagcdn.com/w40/fr.png" class="w-5 h-5 rounded-full" alt="France Flag"> Sophie M. (France)
+          </p>
+        </div>
+  
+        <div class="bg-white border border-gray-200 rounded-xl shadow-md p-6 hover:-translate-y-1 hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="100">
+          <p class="italic text-gray-700">“I was skeptical, but this is legit. No hidden fees, just good help.”</p>
+          <p class="font-semibold mt-4 text-blue-800 flex items-center gap-2">
+            <img src="https://flagcdn.com/w40/us.png" class="w-5 h-5 rounded-full" alt="USA Flag"> David T. (USA)
+          </p>
+        </div>
+  
+        <div class="bg-white border border-gray-200 rounded-xl shadow-md p-6 hover:-translate-y-1 hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="200">
+          <p class="italic text-gray-700">“Tried 3 companies before. This kit is what finally worked.”</p>
+          <p class="font-semibold mt-4 text-blue-800 flex items-center gap-2">
+            <img src="https://flagcdn.com/w40/gr.png" class="w-5 h-5 rounded-full" alt="Greece Flag"> Eleni S. (Greece)
+          </p>
+        </div>
+  
+        <div class="bg-white border border-gray-200 rounded-xl shadow-md p-6 hover:-translate-y-1 hover:shadow-lg transition duration-300" data-aos="fade-up">
+          <p class="italic text-gray-700">“So simple I could do it myself. No need to talk to anyone.”</p>
+          <p class="font-semibold mt-4 text-blue-800 flex items-center gap-2">
+            <img src="https://flagcdn.com/w40/us.png" class="w-5 h-5 rounded-full" alt="USA Flag"> Mike R. (USA)
+          </p>
+        </div>
+  
+        <div class="bg-white border border-gray-200 rounded-xl shadow-md p-6 hover:-translate-y-1 hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="100">
+          <p class="italic text-gray-700">“Highly recommend this to anyone stuck in a timeshare mess.”</p>
+          <p class="font-semibold mt-4 text-blue-800 flex items-center gap-2">
+            <img src="https://flagcdn.com/w40/es.png" class="w-5 h-5 rounded-full" alt="Spain Flag"> Fatima D. (Spain)
+          </p>
+        </div>
+  
+        <div class="bg-white border border-gray-200 rounded-xl shadow-md p-6 hover:-translate-y-1 hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="200">
+          <p class="italic text-gray-700">“Took me 30 minutes total. I emailed the letter, got confirmation a week later.”</p>
+          <p class="font-semibold mt-4 text-blue-800 flex items-center gap-2">
+            <img src="https://flagcdn.com/w40/gb.png" class="w-5 h-5 rounded-full" alt="UK Flag"> Thomas V. (UK)
+          </p>
+        </div>
+  
       </div>
     </div>
-  </section>  
+  </section>
+  
+  
 
 <!-- Image Grid Section -->
 <section class="bg-gray-50 py-12">
