Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -315,6 +315,44 @@
         </datalist>
       </div>
     </div>
+
+    <!-- How It Works Section -->
+<section id="how-it-works" class="py-12 bg-white">
+    <div class="max-w-6xl mx-auto px-4">
+      <h2 class="text-2xl font-bold text-center text-blue-700 mb-8">How It Works</h2>
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-6 text-center">
+        
+        <!-- Step 1 -->
+        <div class="p-6 rounded-xl shadow bg-blue-50">
+          <div class="text-4xl mb-4">🔍</div>
+          <h3 class="font-semibold text-lg mb-2">1. Check Your Resort</h3>
+          <p class="text-sm text-gray-600">Use our checker to see if your resort qualifies.</p>
+        </div>
+  
+        <!-- Step 2 -->
+        <div class="p-6 rounded-xl shadow bg-blue-50">
+          <div class="text-4xl mb-4">💳</div>
+          <h3 class="font-semibold text-lg mb-2">2. Buy the DIY Kit</h3>
+          <p class="text-sm text-gray-600">Instant access for just €169 — no hidden fees.</p>
+        </div>
+  
+        <!-- Step 3 -->
+        <div class="p-6 rounded-xl shadow bg-blue-50">
+          <div class="text-4xl mb-4">📤</div>
+          <h3 class="font-semibold text-lg mb-2">3. Send Your Letter</h3>
+          <p class="text-sm text-gray-600">Use the templates to notify your resort and cancel.</p>
+        </div>
+  
+        <!-- Step 4 -->
+        <div class="p-6 rounded-xl shadow bg-blue-50">
+          <div class="text-4xl mb-4">🎉</div>
+          <h3 class="font-semibold text-lg mb-2">4. Exit Confirmed</h3>
+          <p class="text-sm text-gray-600">Most clients exit in under 30 days — stress free.</p>
+        </div>
+  
+      </div>
+    </div>
+  </section>
   
     <!-- News Testimonials Section -->
     <div class="w-full max-w-7xl mx-auto px-4 py-8">
