--- a/public/index.html
+++ b/public/index.html
@@ -332,7 +332,7 @@
         <!-- Step 2 -->
         <div class="p-6 rounded-xl shadow bg-blue-50">
           <div class="text-4xl mb-4">💳</div>
-          <h3 class="font-semibold text-lg mb-2">2. Buy the DIY Kit</h3>
+          <h3 class="font-semibold text-lg mb-2">2. Buy the Do It Yourself Kit</h3>
           <p class="text-sm text-gray-600">Instant access for just €169 — no hidden fees.</p>
         </div>
   
@@ -353,6 +353,15 @@
       </div>
     </div>
   </section>
+
+      <!-- Hero Banner Section with Happy Travelers -->
+      <section class="w-full mt-8">
+        <img src="images/hero-exit2.jpg"
+             alt="Happy timeshare exits"
+             class="w-full h-auto object-cover object-center max-h-[600px]"
+             loading="eager" />
+      </section>
+    </section>  
   
     <!-- News Testimonials Section -->
     <div class="w-full max-w-7xl mx-auto px-4 py-8">
@@ -376,15 +385,6 @@
         </div>
       </div>
     </div>
-  
-    <!-- Hero Banner Section with Happy Travelers -->
-    <section class="w-full mt-8">
-      <img src="images/hero-exit2.jpg"
-           alt="Happy timeshare exits"
-           class="w-full h-auto object-cover object-center max-h-[600px]"
-           loading="eager" />
-    </section>
-  </section>  
 
 <!-- Legal Explanation with Background -->
 <section class="py-16 bg-cover bg-center bg-no-repeat" style="background-image: url('images/airport-background-night.jpg');">
