--- a/public/index.html
+++ b/public/index.html
@@ -505,6 +505,41 @@
     </div>
   </div>  
 
+<!-- TRUST ELEMENTS SECTION -->
+<section class="bg-white py-12">
+    <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
+  
+      <!-- Verified Badge -->
+      <div class="flex flex-col items-center" data-aos="fade-up">
+        <img src="/images/verified-quaerens-badge.png" alt="Verified by Quaerens Ltd" class="w-[150px] h-auto mb-4">
+        <p class="text-sm text-gray-600">✅ Verified by Quaerens Ltd — Registered UK Consumer Claims Agent</p>
+      </div>
+  
+      <!-- Refund Guarantee -->
+      <div class="flex flex-col items-center" data-aos="fade-up" data-aos-delay="100">
+        <img src="/images/shield-refund.png" alt="Refund Guarantee" class="w-[100px] h-auto mb-4">
+        <p class="text-sm text-gray-600">🛡️ Full refund if the Do It Yourself Kit is not effective — no questions asked.</p>
+      </div>
+  
+      <!-- Email Contact -->
+      <div class="flex flex-col items-center" data-aos="fade-up" data-aos-delay="200">
+        <a href="mailto:info@quaerens.co.uk">
+          <img src="/images/contact-email.png" alt="Email Support" class="w-[140px] h-auto mb-2">
+        </a>
+        <p class="text-sm text-gray-600">Email us any time</p>
+      </div>
+  
+      <!-- WhatsApp Contact -->
+      <div class="flex flex-col items-center" data-aos="fade-up" data-aos-delay="300">
+        <a href="https://wa.me/447578600296" target="_blank">
+          <img src="/images/contact-whatsapp.png" alt="WhatsApp Support" class="w-[140px] h-auto mb-2">
+        </a>
+        <p class="text-sm text-gray-600">Chat with us on WhatsApp</p>
+      </div>
+  
+    </div>
+  </section>  
+
 <!-- Testimonials -->
 <section class="relative py-20 bg-gradient-to-br from-yellow-50 via-white to-blue-50">
     <div class="max-w-7xl mx-auto px-6">
