Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -524,7 +524,7 @@
       <!-- Email Contact -->
       <div class="flex flex-col items-center" data-aos="fade-up" data-aos-delay="200">
         <a href="mailto:info@quaerens.co.uk">
-          <img src="/images/contact-email.png" alt="Email Support" class="w-[140px] h-auto mb-2">
+          <img src="/images/contact-email-badge.png" alt="Email Support" class="w-[140px] h-auto mb-2">
         </a>
         <p class="text-sm text-gray-600">Email us any time</p>
       </div>
@@ -532,7 +532,7 @@
       <!-- WhatsApp Contact -->
       <div class="flex flex-col items-center" data-aos="fade-up" data-aos-delay="300">
         <a href="https://wa.me/447578600296" target="_blank">
-          <img src="/images/contact-whatsapp.png" alt="WhatsApp Support" class="w-[140px] h-auto mb-2">
+          <img src="/images/contact-whatsapp-badge.png" alt="WhatsApp Support" class="w-[140px] h-auto mb-2">
         </a>
         <p class="text-sm text-gray-600">Chat with us on WhatsApp</p>
       </div>
