Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -316,43 +316,43 @@
       </div>
     </div>
 
-    <!-- How It Works Section -->
-<section id="how-it-works" class="py-12 bg-white">
+<!-- How It Works Section -->
+<section id="how-it-works" class="py-16 bg-gradient-to-b from-blue-50 to-white">
     <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-2xl font-bold text-center text-blue-700 mb-8">How It Works</h2>
-      <div class="grid grid-cols-1 md:grid-cols-4 gap-6 text-center">
-        
+      <h2 class="text-3xl font-extrabold text-center text-blue-800 mb-12">How It Works</h2>
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
+  
         <!-- Step 1 -->
-        <div class="p-6 rounded-xl shadow bg-blue-50">
-          <div class="text-4xl mb-4">🔍</div>
-          <h3 class="font-semibold text-lg mb-2">1. Check Your Resort</h3>
-          <p class="text-sm text-gray-600">Use our checker to see if your resort qualifies.</p>
+        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-blue-300 hover:shadow-xl transition-all duration-300">
+          <div class="text-5xl font-extrabold text-blue-700 mb-4">1</div>
+          <h3 class="font-bold text-lg mb-2 text-gray-800">Check Resort Policy</h3>
+          <p class="text-sm text-gray-600">Some resorts offer free exits if your loan is paid and fees are current. Always check first.</p>
         </div>
   
         <!-- Step 2 -->
-        <div class="p-6 rounded-xl shadow bg-blue-50">
-          <div class="text-4xl mb-4">💳</div>
-          <h3 class="font-semibold text-lg mb-2">2. Buy the Do It Yourself Kit</h3>
-          <p class="text-sm text-gray-600">Instant access for just €169 — no hidden fees.</p>
+        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-yellow-400 hover:shadow-xl transition-all duration-300">
+          <div class="text-5xl font-extrabold text-yellow-500 mb-4">2</div>
+          <h3 class="font-bold text-lg mb-2 text-gray-800">Buy the DIY Kit</h3>
+          <p class="text-sm text-gray-600">Instant access for just €169 — includes legal letters and step-by-step guidance.</p>
         </div>
   
         <!-- Step 3 -->
-        <div class="p-6 rounded-xl shadow bg-blue-50">
-          <div class="text-4xl mb-4">📤</div>
-          <h3 class="font-semibold text-lg mb-2">3. Send Your Letter</h3>
-          <p class="text-sm text-gray-600">Use the templates to notify your resort and cancel.</p>
+        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-green-400 hover:shadow-xl transition-all duration-300">
+          <div class="text-5xl font-extrabold text-green-500 mb-4">3</div>
+          <h3 class="font-bold text-lg mb-2 text-gray-800">Send Your Letter</h3>
+          <p class="text-sm text-gray-600">Use our pre-written legal template to cancel your timeshare with confidence.</p>
         </div>
   
         <!-- Step 4 -->
-        <div class="p-6 rounded-xl shadow bg-blue-50">
-          <div class="text-4xl mb-4">🎉</div>
-          <h3 class="font-semibold text-lg mb-2">4. Exit Confirmed</h3>
-          <p class="text-sm text-gray-600">Most clients exit in under 30 days — stress free.</p>
+        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-purple-400 hover:shadow-xl transition-all duration-300">
+          <div class="text-5xl font-extrabold text-purple-500 mb-4">4</div>
+          <h3 class="font-bold text-lg mb-2 text-gray-800">Exit Complete</h3>
+          <p class="text-sm text-gray-600">Most clients receive written confirmation within a few weeks — stress-free and final.</p>
         </div>
   
       </div>
     </div>
-  </section>
+  </section>  
 
       <!-- Hero Banner Section with Happy Travelers -->
       <section class="w-full mt-8">
@@ -512,7 +512,7 @@
       <!-- Verified Badge -->
       <div class="flex flex-col items-center" data-aos="fade-up">
         <img src="/images/verified-quaerens-badge.png" alt="Verified by Quaerens Ltd" class="w-[150px] h-auto mb-4">
-        <p class="text-sm text-gray-600">✅ Verified by Quaerens Ltd — Registered UK Consumer Claims Agent</p>
+        <p class="text-sm text-gray-600">✅ Verified by Quaerens Ltd</p>
       </div>
   
       <!-- Refund Guarantee -->
