Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
   
         <!-- Yellow Banner Header -->
         <div class="bg-yellow-300 text-blue-900 px-4 py-3 rounded-t-xl text-center border-b-2 border-yellow-500">
-          <h2 class="text-xl sm:text-2xl font-bold">🏖️ Check If Your Resort Is Eligible</h2>
+          <h2 class="text-xl sm:text-2xl font-bold">Check If Your Resort Is Eligible</h2>
           <p class="text-sm sm:text-base mt-1">
             Enter your resort name to see if you can use our Do-It-Yourself Timeshare Exit Kit.
           </p>
@@ -258,6 +258,11 @@
              class="block w-full text-center mt-4 bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-2 px-4 rounded transition hidden">
             Get the Do-It-Yourself Exit Kit →
           </a>
+
+          <p class="mt-6 text-sm text-gray-700 text-center">
+            <strong>Not listed?</strong> Contact us — we may still be able to help!<br>
+            💡 <em>Tip:</em> Some resorts allow free cancellation if no loan is outstanding — check with them directly.
+          </p>
         </div>
   
         <!-- Resort List -->
