Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,13 @@
           <p class="mt-6 text-sm text-gray-700 text-center">
             <strong>Not listed?</strong> Contact us — we may still be able to help!<br>
             💡 <em>Tip:</em> Some resorts allow free cancellation if no loan is outstanding — check with them directly.
-          </p>
+        </p>
+
+        <div class="mt-6 text-center">
+          <a href="/download-kit.html"
+             class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
+            Buy your Do-It-Yourself Kit today for only €169
+          </a>
         </div>
   
         <!-- Resort List -->
