Your update message here

--- a/public/test.html
+++ b/public/test.html
@@ -227,7 +227,7 @@
       </div>
   
 <!-- Right: Resort Eligibility Checker -->
-<div class="bg-white rounded-xl shadow-md content-box h-full" data-aos="fade-up">
+<div class="bg-white rounded-xl shadow-md content-box h-full mb-12" data-aos="fade-up">
 
     <!-- Yellow Banner Header -->
     <div class="bg-yellow-300 text-blue-900 px-4 py-3 rounded-t-xl text-center border-b-2 border-yellow-500">
@@ -355,43 +355,46 @@
   });
 </script>
 
+<!-- Spacer to ensure proper layout flow -->
+<div class="clear-both w-full h-6 md:h-10"></div>
+
 <!-- How It Works Section -->
-<section id="how-it-works" class="py-16 bg-gradient-to-b from-blue-50 to-white">
-    <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-3xl font-extrabold text-center text-blue-800 mb-12">How It Works</h2>
-      <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
-  
-        <!-- Step 1 -->
-        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-blue-300 hover:shadow-xl transition-all duration-300">
-          <div class="text-5xl font-extrabold text-blue-700 mb-4">1</div>
-          <h3 class="font-bold text-lg mb-2 text-gray-800">Check Resort Policy</h3>
-          <p class="text-sm text-gray-600">Some resorts offer free exits if your loan is paid and fees are current. Always check first.</p>
-        </div>
-  
-        <!-- Step 2 -->
-        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-yellow-400 hover:shadow-xl transition-all duration-300">
-          <div class="text-5xl font-extrabold text-yellow-500 mb-4">2</div>
-          <h3 class="font-bold text-lg mb-2 text-gray-800">Buy the DIY Kit</h3>
-          <p class="text-sm text-gray-600">Instant access for just €169 — includes legal letters and step-by-step guidance.</p>
-        </div>
-  
-        <!-- Step 3 -->
-        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-green-400 hover:shadow-xl transition-all duration-300">
-          <div class="text-5xl font-extrabold text-green-500 mb-4">3</div>
-          <h3 class="font-bold text-lg mb-2 text-gray-800">Send Your Letter</h3>
-          <p class="text-sm text-gray-600">Use our pre-written legal template to cancel your timeshare with confidence.</p>
-        </div>
-  
-        <!-- Step 4 -->
-        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-purple-400 hover:shadow-xl transition-all duration-300">
-          <div class="text-5xl font-extrabold text-purple-500 mb-4">4</div>
-          <h3 class="font-bold text-lg mb-2 text-gray-800">Exit Complete</h3>
-          <p class="text-sm text-gray-600">Most clients receive written confirmation within a few weeks — stress-free and final.</p>
-        </div>
-  
+<section id="how-it-works" class="py-16 bg-gradient-to-b from-blue-50 to-white w-full clear-both">
+  <div class="max-w-6xl mx-auto px-4">
+    <h2 class="text-3xl font-extrabold text-center text-blue-800 mb-12">How It Works</h2>
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
+
+      <!-- Step 1 -->
+      <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-blue-300 hover:shadow-xl transition-all duration-300">
+        <div class="text-5xl font-extrabold text-blue-700 mb-4">1</div>
+        <h3 class="font-bold text-lg mb-2 text-gray-800">Check Resort Policy</h3>
+        <p class="text-sm text-gray-600">Some resorts offer free exits if your loan is paid and fees are current. Always check first.</p>
       </div>
+
+      <!-- Step 2 -->
+      <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-yellow-400 hover:shadow-xl transition-all duration-300">
+        <div class="text-5xl font-extrabold text-yellow-500 mb-4">2</div>
+        <h3 class="font-bold text-lg mb-2 text-gray-800">Buy the DIY Kit</h3>
+        <p class="text-sm text-gray-600">Instant access for just €169 — includes legal letters and step-by-step guidance.</p>
+      </div>
+
+      <!-- Step 3 -->
+      <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-green-400 hover:shadow-xl transition-all duration-300">
+        <div class="text-5xl font-extrabold text-green-500 mb-4">3</div>
+        <h3 class="font-bold text-lg mb-2 text-gray-800">Send Your Letter</h3>
+        <p class="text-sm text-gray-600">Use our pre-written legal template to cancel your timeshare with confidence.</p>
+      </div>
+
+      <!-- Step 4 -->
+      <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-purple-400 hover:shadow-xl transition-all duration-300">
+        <div class="text-5xl font-extrabold text-purple-500 mb-4">4</div>
+        <h3 class="font-bold text-lg mb-2 text-gray-800">Exit Complete</h3>
+        <p class="text-sm text-gray-600">Most clients receive written confirmation within a few weeks — stress-free and final.</p>
+      </div>
+
     </div>
-  </section>  
+  </div>
+</section>
 
       <!-- Hero Banner Section with Happy Travelers -->
       <section class="w-full mt-8">
