--- a/public/test.html
+++ b/public/test.html
@@ -225,38 +225,31 @@
           <li>One-time purchase. No hidden fees. Instant access.</li>
         </ul>
       </div>
-  
-<!-- Hero Banner Section with Happy Travelers -->
-<section class="w-full mt-8">
-    <img src="images/hero-exit2.jpg"
-         alt="Happy timeshare exits"
-         class="w-full h-auto object-cover object-center max-h-[600px]"
-         loading="eager" />
-  </section>  
 
 <!-- Right: Resort Eligibility Checker -->
-<div class="bg-white rounded-xl shadow-md content-box h-full mb-12" data-aos="fade-up">
+<section class="w-full px-4 max-w-6xl mx-auto mt-12" data-aos="fade-up">
+    <div class="bg-white rounded-xl shadow-md content-box h-full">
 
     <!-- Yellow Banner Header -->
     <div class="bg-yellow-300 text-blue-900 px-4 py-3 rounded-t-xl text-center border-b-2 border-yellow-500">
-      <h2 class="text-xl sm:text-2xl font-bold">Check If Your Resort Is Eligible</h2>
-      <p class="text-sm sm:text-base mt-1">
-        Enter your resort name to see if you can use our Do-It-Yourself Timeshare Exit Kit.
-      </p>
-    </div>
+        <h2 class="text-xl sm:text-2xl font-bold">Check If Your Resort Is Eligible</h2>
+        <p class="text-sm sm:text-base mt-1">
+          Enter your resort name to see if you can use our Do-It-Yourself Timeshare Exit Kit.
+        </p>
+      </div>
   
     <!-- Form -->
     <div class="p-6">
-      <form id="resort-check-form" class="space-y-4">
-        <label for="resort" class="block font-semibold">Resort Name</label>
-        <input id="resort" name="resort"
-               placeholder="e.g. Anfi Del Mar, Sunset Bay Club..." required
-               class="w-full border border-gray-300 p-2 rounded" />
-        <button type="submit"
-                class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded transition">
-          Check Eligibility
-        </button>
-      </form>
+        <form id="resort-check-form" class="space-y-4">
+          <label for="resort" class="block font-semibold">Resort Name</label>
+          <input list="resorts" id="resort" name="resort"
+                 placeholder="e.g. Anfi Del Mar, CLC World..." required
+                 class="w-full border border-gray-300 p-2 rounded" />
+          <button type="submit"
+                  class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded transition">
+            Check Eligibility
+          </button>
+        </form>
   
       <div id="resort-result" class="mt-6 text-center text-lg font-semibold hidden"></div>
   
@@ -272,7 +265,7 @@
         <strong>Not listed?</strong> Contact us — we may still be able to help!<br>
         💡 <em>Tip:</em> Many resorts allow free exit if no loan is outstanding — check with them directly.
       </p>
-  
+
       <div class="mt-6 text-center">
         <a href="/download-kit.html"
            class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900
@@ -281,128 +274,111 @@
         </a>
       </div>
     </div>
-</div>
 
 <!-- SMART MATCH SCRIPT -->
-<script>
-  const approvedResorts = [
-    "Anfi Del Mar",
-    "Club La Costa (CLC)",
-    "Los Amigos Beach Club",
-    "Royal Oasis Club at Pueblo Quinta",
-    "Sahara Sunset Club",
-    "Santa Barbara Golf & Ocean Club",
-    "Sunset Bay Club",
-    "Sunset Harbour Club",
-    "Sunset View Club",
-    "Royal Tenerife Country Club",
-    "Marriott Playa Andaluza",
-    "Marriott Marbella Beach Resort",
-    "Club Son Antem (Marriott)",
-    "Club Cala Blanca (CLC)",
-    "Club del Carmen (CLC)",
-    "Jardines del Sol (CLC)",
-    "Village d’Île‑de‑France (Marriott)",
-    "Le Club Mougins (Diamond)",
-    "Royal Regency Paris Vincennes (Diamond)",
-    "Borgo alle Vigne (Hilton)",
-    "Palazzo Catalani (Diamond)",
-    "Vilar do Golf (Diamond)",
-    "Alpine Club (Diamond)",
-    "Craigendarroch (Hilton)",
-    "Cromer Country Club (Diamond)",
-    "Pine Lake Resort (Diamond)",
-    "The Kenmore Club (Diamond)",
-    "Thurnham Hall (Diamond)",
-    "Woodford Bridge Country Club (Diamond)",
-    "Wychnor Park Country Club (Diamond)",
-    "Cibola Vista Resort & Spa (Bluegreen)",
-    "Bell Rock Inn (Diamond)",
-    "Kohls Ranch Lodge (Diamond)",
-    "Los Abrigados Resort & Spa (Diamond)",
-    "PVC at The Roundhouse (Diamond)",
-    "Streamside at Vail (Bluegreen)",
-    "The Historic Crags Lodge (Diamond)",
-    "Lake Cumberland Resort (Bluegreen)",
-    "Scenic Hills RV Resort (Bluegreen)",
-    "Paradise Point (Bluegreen)",
-    "Wilderness Club at Big Cedar (Bluegreen)",
-    "Villas de Santa Fe (Diamond)",
-    "Beachwoods Resort (Diamond)",
-    "Sunrise Ridge Resort (Diamond)",
-    "Laurel Crest (Bluegreen)",
-    "Mountain Loft (Bluegreen)",
-    "Shenandoah Crossing (Bluegreen)",
-    "Patrick Henry Square (Bluegreen)",
-    "Parkside Williamsburg Resort (Bluegreen)",
-    "Elian Hotel & Spa (Bluegreen)"
-  ];
+<datalist id="resorts">
+    <option value="Anfi Del Mar">
+    <option value="Club La Costa (CLC)">
+    <option value="Los Amigos Beach Club">
+    <option value="Royal Oasis Club at Pueblo Quinta">
+    <option value="Sahara Sunset Club">
+    <option value="Santa Barbara Golf & Ocean Club">
+    <option value="Sunset Bay Club">
+    <option value="Sunset Harbour Club">
+    <option value="Sunset View Club">
+    <option value="Royal Tenerife Country Club">
+    <option value="Marriott Playa Andaluza">
+    <option value="Marriott Marbella Beach Resort">
+    <option value="Club Son Antem (Marriott)">
+    <option value="Club Cala Blanca (CLC)">
+    <option value="Club del Carmen (CLC)">
+    <option value="Jardines del Sol (CLC)">
+    <option value="Village d’Île‑de‑France (Marriott)">
+    <option value="Le Club Mougins (Diamond)">
+    <option value="Royal Regency Paris Vincennes (Diamond)">
+    <option value="Borgo alle Vigne (Hilton)">
+    <option value="Palazzo Catalani (Diamond)">
+    <option value="Vilar do Golf (Diamond)">
+    <option value="Alpine Club (Diamond)">
+    <option value="Craigendarroch (Hilton)">
+    <option value="Cromer Country Club (Diamond)">
+    <option value="Pine Lake Resort (Diamond)">
+    <option value="The Kenmore Club (Diamond)">
+    <option value="Thurnham Hall (Diamond)">
+    <option value="Woodford Bridge Country Club (Diamond)">
+    <option value="Wychnor Park Country Club (Diamond)">
+    <option value="Cibola Vista Resort & Spa (Bluegreen)">
+    <option value="Bell Rock Inn (Diamond)">
+    <option value="Kohls Ranch Lodge (Diamond)">
+    <option value="Los Abrigados Resort & Spa (Diamond)">
+    <option value="PVC at The Roundhouse (Diamond)">
+    <option value="Streamside at Vail (Bluegreen)">
+    <option value="The Historic Crags Lodge (Diamond)">
+    <option value="Lake Cumberland Resort (Bluegreen)">
+    <option value="Scenic Hills RV Resort (Bluegreen)">
+    <option value="Paradise Point (Bluegreen)">
+    <option value="Wilderness Club at Big Cedar (Bluegreen)">
+    <option value="Villas de Santa Fe (Diamond)">
+    <option value="Beachwoods Resort (Diamond)">
+    <option value="Sunrise Ridge Resort (Diamond)">
+    <option value="Laurel Crest (Bluegreen)">
+    <option value="Mountain Loft (Bluegreen)">
+    <option value="Shenandoah Crossing (Bluegreen)">
+    <option value="Patrick Henry Square (Bluegreen)">
+    <option value="Parkside Williamsburg Resort (Bluegreen)">
+    <option value="Elian Hotel & Spa (Bluegreen)">
+  </datalist>
+</div>
+</section>
 
-  document.getElementById("resort-check-form").addEventListener("submit", function (e) {
-    e.preventDefault();
-
-    const input = document.getElementById("resort").value.trim().toLowerCase();
-    const result = document.getElementById("resort-result");
-    const kitBtn = document.getElementById("kit-button");
-
-    const match = approvedResorts.find(name =>
-      name.toLowerCase().includes(input)
-    );
-
-    if (match) {
-      result.textContent = `✅ "${match}" is eligible for the DIY Exit Kit.`;
-      result.classList.remove("hidden", "text-red-600");
-      result.classList.add("text-green-600");
-      kitBtn.classList.remove("hidden");
-    } else {
-      result.textContent = "❌ Sorry, we couldn’t find that resort. Please contact us for help.";
-      result.classList.remove("hidden", "text-green-600");
-      result.classList.add("text-red-600");
-      kitBtn.classList.add("hidden");
-    }
-  });
-</script>
+<!-- Hero Banner Section -->
+<section class="w-full mt-8">
+    <img src="images/hero-exit2.jpg"
+         alt="Happy timeshare exits"
+         class="w-full h-auto object-cover object-center max-h-[600px]"
+         loading="eager" />
+  </section>
 
 <!-- Spacer to ensure proper layout flow -->
 <div class="clear-both w-full h-6 md:h-10"></div>
 
 <!-- How It Works Section -->
 <section id="how-it-works" class="py-16 bg-gradient-to-b from-blue-50 to-white w-full clear-both">
-  <div class="max-w-6xl mx-auto px-4">
-    <h2 class="text-3xl font-extrabold text-center text-blue-800 mb-12">How It Works</h2>
-    <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
-
-      <!-- Step 1 -->
-      <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-blue-300 hover:shadow-xl transition-all duration-300">
-        <div class="text-5xl font-extrabold text-blue-700 mb-4">1</div>
-        <h3 class="font-bold text-lg mb-2 text-gray-800">Check Resort Policy</h3>
-        <p class="text-sm text-gray-600">Some resorts offer free exits if your loan is paid and fees are current. Always check first.</p>
+    <div class="max-w-6xl mx-auto px-4">
+      <h2 class="text-3xl font-extrabold text-center text-blue-800 mb-12">How It Works</h2>
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
+  
+        <!-- Step 1 -->
+        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-blue-300 hover:shadow-xl transition-all duration-300">
+          <div class="text-5xl font-extrabold text-blue-700 mb-4">1</div>
+          <h3 class="font-bold text-lg mb-2 text-gray-800">Check Resort Policy</h3>
+          <p class="text-sm text-gray-600">Some resorts offer free exits if your loan is paid and fees are current. Always check first.</p>
+        </div>
+  
+        <!-- Step 2 -->
+        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-yellow-400 hover:shadow-xl transition-all duration-300">
+          <div class="text-5xl font-extrabold text-yellow-500 mb-4">2</div>
+          <h3 class="font-bold text-lg mb-2 text-gray-800">Buy the DIY Kit</h3>
+          <p class="text-sm text-gray-600">Instant access for just €169 — includes legal letters and step-by-step guidance.</p>
+        </div>
+  
+        <!-- Step 3 -->
+        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-green-400 hover:shadow-xl transition-all duration-300">
+          <div class="text-5xl font-extrabold text-green-500 mb-4">3</div>
+          <h3 class="font-bold text-lg mb-2 text-gray-800">Send Your Letter</h3>
+          <p class="text-sm text-gray-600">Use our pre-written legal template to cancel your timeshare with confidence.</p>
+        </div>
+  
+        <!-- Step 4 -->
+        <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-purple-400 hover:shadow-xl transition-all duration-300">
+          <div class="text-5xl font-extrabold text-purple-500 mb-4">4</div>
+          <h3 class="font-bold text-lg mb-2 text-gray-800">Exit Complete</h3>
+          <p class="text-sm text-gray-600">Most clients receive written confirmation within a few weeks — stress-free and final.</p>
+        </div>
+  
       </div>
-
-      <!-- Step 2 -->
-      <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-yellow-400 hover:shadow-xl transition-all duration-300">
-        <div class="text-5xl font-extrabold text-yellow-500 mb-4">2</div>
-        <h3 class="font-bold text-lg mb-2 text-gray-800">Buy the DIY Kit</h3>
-        <p class="text-sm text-gray-600">Instant access for just €169 — includes legal letters and step-by-step guidance.</p>
-      </div>
-
-      <!-- Step 3 -->
-      <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-green-400 hover:shadow-xl transition-all duration-300">
-        <div class="text-5xl font-extrabold text-green-500 mb-4">3</div>
-        <h3 class="font-bold text-lg mb-2 text-gray-800">Send Your Letter</h3>
-        <p class="text-sm text-gray-600">Use our pre-written legal template to cancel your timeshare with confidence.</p>
-      </div>
-
-      <!-- Step 4 -->
-      <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-purple-400 hover:shadow-xl transition-all duration-300">
-        <div class="text-5xl font-extrabold text-purple-500 mb-4">4</div>
-        <h3 class="font-bold text-lg mb-2 text-gray-800">Exit Complete</h3>
-        <p class="text-sm text-gray-600">Most clients receive written confirmation within a few weeks — stress-free and final.</p>
-      </div>
-
     </div>
-  </div>
-</section>
+  </section>
   
     <!-- News Testimonials Section -->
     <div class="w-full max-w-7xl mx-auto px-4 py-8">
